[gd_scene load_steps=5 format=2]

[ext_resource path="res://image_back.png" type="Texture" id=1]
[ext_resource path="res://image_middle.png" type="Texture" id=2]
[ext_resource path="res://image_front.png" type="Texture" id=3]
[ext_resource path="res://Layers.gd" type="Script" id=4]

[node name="ParallaxBackground" type="ParallaxBackground"]
script = ExtResource( 4 )

[node name="BackLayer" type="ParallaxLayer" parent="."]
motion_scale = Vector2( 0.2, 1 )
motion_mirroring = Vector2( 800, 0 )

[node name="Sprite" type="Sprite" parent="BackLayer"]
position = Vector2( 800, 200 )
texture = ExtResource( 1 )

[node name="MiddleLayer" type="ParallaxLayer" parent="."]
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 800, 0 )

[node name="Sprite" type="Sprite" parent="MiddleLayer"]
position = Vector2( 800, 200 )
texture = ExtResource( 2 )

[node name="FrontLayer" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2( 800, 0 )

[node name="Sprite" type="Sprite" parent="FrontLayer"]
position = Vector2( 800, 200 )
texture = ExtResource( 3 )
